# cisl_tutorial

./: .gitignore  README.md  pyproject.toml
configs/: sweep.qsub  sweep.yaml
src/models/: basic_cnn.py
tests/: main.py
